<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AnswerUtilityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer5"
            app:layout_constraintBottom_toTopOf="@+id/utilityRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outageCheckBox1"
            app:layout_constraintVertical_bias="0.734" />

        <RadioGroup
            android:id="@+id/utilityRadioGroup"
            android:layout_width="236dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/outageQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:layout_constraintVertical_bias="0.741">

            <RadioButton
                android:id="@+id/utilityRadioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utility_radio_option1" />

            <RadioButton
                android:id="@+id/utilityRadioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utility_radio_option2" />

            <RadioButton
                android:id="@+id/utilityRadioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utility_radio_option3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/utilityRadioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utility_radio_option4" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="138dp"
            android:layout_height="98dp"
            android:contentDescription="@string/image_utility"
            android:src="@drawable/utility"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/utility"
            tools:layout_editor_absoluteY="37dp" />

        <TextView
            android:id="@+id/outageQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:text="@string/answer5_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <CheckBox
            android:id="@+id/outageCheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utility_check_box1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.405"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outageQuestion" />

        <CheckBox
            android:id="@+id/outageCheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utility_check_box2"
            app:layout_constraintBottom_toTopOf="@+id/outageCheckBox3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outageCheckBox1" />

        <CheckBox
            android:id="@+id/outageCheckBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="76dp"
            android:text="@string/utility_check_box3"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.389"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>