<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AnswerPoliceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="166dp"
            android:layout_height="68dp"
            android:src="@drawable/sos"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer3"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.367" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.777" />

        <RadioGroup
            android:id="@+id/policeRadioGroup"
            android:layout_width="282dp"
            android:layout_height="212dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.285">

            <RadioButton
                android:id="@+id/policeRadioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_radio_option1" />

            <RadioButton
                android:id="@+id/policeRadioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_radio_option2" />

            <RadioButton
                android:id="@+id/policeRadioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_radio_option3" />

            <RadioButton
                android:id="@+id/policeRadioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_radio_option4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/policeRadioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_radio_option5" />

            <RadioButton
                android:id="@+id/policeRadioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_radio_option6" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>