<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AnswerMedicalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="95dp"
            android:layout_height="62dp"
            android:layout_marginTop="36dp"
            app:layout_constraintBottom_toTopOf="@+id/phoneText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.477"
            app:srcCompat="@drawable/sos"
            tools:src="@drawable/sos" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/answer1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

        <RadioGroup
            android:id="@+id/medicalRadioGroup"
            android:layout_width="196dp"
            android:layout_height="162dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.453">

            <RadioButton
                android:id="@+id/medicalRadioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_radio_option1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/medicalRadioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_radio_option2" />

            <RadioButton
                android:id="@+id/medicalRadioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_radio_option3" />

            <RadioButton
                android:id="@+id/medicalRadioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_radio_option4" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>