<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AnswerTrafficFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            app:layout_constraintBottom_toTopOf="@+id/trafficRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accidentQuestion2" />

        <RadioGroup
            android:id="@+id/trafficRadioGroup"
            android:layout_width="163dp"
            android:layout_height="117dp"
            app:layout_constraintBottom_toTopOf="@+id/accidentQuestion1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/trafficRadioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traffic_radio_option1" />

            <RadioButton
                android:id="@+id/trafficRadioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traffic_radio_option2" />

            <RadioButton
                android:id="@+id/trafficRadioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traffic_radio_option3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="130dp"
            android:layout_height="104dp"
            android:contentDescription="@string/image_traffic"
            android:src="@drawable/traffic"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/traffic" />

        <TextView
            android:id="@+id/accidentQuestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4_1"
            app:layout_constraintBottom_toTopOf="@+id/accidentQuestion2"
            app:layout_constraintEnd_toStartOf="@+id/accidentAnswer1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trafficRadioGroup" />

        <TextView
            android:id="@+id/accidentQuestion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4_2"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toStartOf="@+id/accidentAnswer2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accidentQuestion1" />

        <EditText
            android:id="@+id/accidentAnswer1"
            android:layout_width="67dp"
            android:layout_height="55dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/accidentQuestion2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/accidentQuestion1"
            app:layout_constraintTop_toBottomOf="@+id/trafficRadioGroup"
            app:layout_constraintVertical_bias="0.362" />

        <EditText
            android:id="@+id/accidentAnswer2"
            android:layout_width="67dp"
            android:layout_height="57dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/accidentQuestion2"
            app:layout_constraintTop_toBottomOf="@+id/accidentQuestion1"
            app:layout_constraintVertical_bias="0.697" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>